info-films-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: infofilmsservice
    version: "1.0"
  name: infofilmsservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: infofilmsservice
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: infofilmsservice
    spec:
      containers:
        - name: critiqueservice
          image: maelle184/infofilms:1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "512Mi" # Mémoire allouée de manière garantie
              cpu: "500m" # CPU alloué
            limits:
              memory: "1Gi" # Limite maximale de mémoire
              cpu: "1"
      restartPolicy: Always
status: {}
