info-films-service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: infofilmsservice
  name: infofilmsservice
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080  
      name: http
  selector:
    app: infofilmsservice
  type: LoadBalancer
