service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: filmsservice
  name: filmsservice
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080  
      name: http
  selector:
    app: filmsservice
  type: LoadBalancer
