deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: filmsservice
    version: "1.0"
  name: filmsservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: filmsservice
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: filmsservice
    spec:
      containers:
        - name: filmsservice
          image: maelle184/films:1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources: 
            requests:
              memory: "512Mi"   # Mémoire minimale allouée
              cpu: "500m"       # CPU minimal alloué (500m = 0.5 CPU)
            limits:
              memory: "1Gi"     # Mémoire maximale allouée
              cpu: "1"
      restartPolicy: Always
status: {}


---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: filmsservice
  name: filmsservice
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080  
      name: http
  selector:
    app: filmsservice
  type: LoadBalancer
status:
  loadBalancer: {}

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: microservice-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: filmsservice
spec:
  hosts:
    - "*"
  gateways:
    - microservice-gateway
  http:
    - match:
        - uri:
            prefix: /filmsservice/
      rewrite:
        uri: /
      route:
        - destination:
            port:
              number: 80
            host: filmsservice.default.svc.cluster.local
